	  be cooked into glowstone, and there is roughly a half second
	  delay between pulses and the reaction, to avoid creating an
	  incentive to consume too much CPU on the server.

	- Alert client-side mods to the presence of BWR via a custom
	  plugin channel.  An upcoming version of CraftGuide is
	  expected to use this to automatically add BWR recipes to the
	  recipe list.


v0.23
	- Glowstone is now renewable: redstone has a chance of absorbing
	  concentrated sunlight when experiencing a change in potential,
	  converting it to glowstone.

	- Significant refactoring (mostly renaming) in code, to bring
	  naming convention more in line with java coding standard
	  (http://geosoft.no/development/javastyle.html).

	- Cobwebs can now be made by brewing silk string with something
	  suitably sticky.  Don't throw too much string in or you'll end
	  up with a matted mess.

	- Added Flatcore Spawn.  This replaces hardcore spawn, and works
	  very much like it, but should also allow you to spawn in
	  hardcore locations in superflat worlds where there is little
	  or no terrain at or above Y=64.


v0.22
	- Added alternative method to create nether portals when
	  obsidian (or diamonds to collect it) is not available.
	  A portal frame can be built out of emerald, then tainted by
	  performing a dark ritual inside it.  The ritual requires the
	  reading of an arcane incantation, and the sacrifice of a holy
	  man inside the portal frame.

	- Fix long-standing bug that causes certain blocks (the modded
	  ones, e.g. soulsand, BTW aesthetic opaques) reappearing after
	  being mined.  It was caused by tools losing track of the
	  blocks against which they're effective.

	- Spontaneous animal spawning on tall grass in the desert, if it
	  is lit directly by natural sunlight, if there are no other
	  animals within a large radius around them.  This makes it
	  possible to play a desert-only superflat world.


v0.21
	- Automatic Update Check.  The server will automatically