@@ -144,9 +144,6 @@ Low-Efficiency Recipes:
 		- Hellfire Dust
 		- Redstone
 
-Flatcore Spawn:
-	Hardcore spawn that works in superflat worlds.
-
 Hardercore Villagers:
 	Goods that may be sold by villagers have been further
 	restricted.  This reduces villager trades bypassing some of the
